# cross-exchange-arbitrage

./: .gitignore  DEPENDENCY_CONFLICT.md  GRVT_ASTER_IMPLEMENTATION.md  SUPABASE_DIAGNOSIS.md  SUPABASE_SETUP.md  main_grvt_arb.py  maker_taker_bot.py  pyproject.toml  requirements.txt  run_grvt_nado.py  test_direct_supabase.py  test_jwt_pattern.py  test_nado_connection.py  test_nado_standalone.py  test_supabase_new.py  verify_supabase_config.py
exchanges/: __init__.py  aster.py  base.py  grvt.py
helpers/: __init__.py  pushover_bot.py  supabase_helper.py
strategy_grvt/: README.md  __init__.py  data_logger.py  grvt_arb.py  order_book_manager.py  order_manager.py  position_tracker.py  websocket_manager.py
strategy_grvt_nado/: README.md  __init__.py  grvt_nado_arb.py  order_book_manager.py  order_manager.py  position_tracker.py  websocket_manager.py
test/: example_supabase_usage.py  test_supabase_helper.py
tests/: __init__.py  test_supabase_helper.py
